SERVER-37459 special case for $group with $$ROOT or $$CURRENT